// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generic Resources Correctly Resolves Create Resources Mutation 1`] = `
Object {
  "data": Object {
    "createResources": Object {
      "errors": Array [],
      "result": Array [
        Object {
          "apiVersion": "mcm.ibm.com/v1alpha1",
          "kind": "Application",
          "metadata": Object {
            "annotations": Object {
              "mcm.ibm.com/user-group": "c3lzdGVtOmF1dGhlbnRpY2F0ZWQ=",
              "mcm.ibm.com/user-identity": "aHR0cHM6Ly9teWNsdXN0ZXIuaWNwOjk0NDMvb2lkYy9lbmRwb2ludC9PUCNhZG1pbg==",
            },
            "creationTimestamp": "2018-09-07T14:19:02Z",
            "labels": Object {
              "deployable": "deployable01",
              "hcmapp": "testapp",
            },
            "name": "testapp",
            "namespace": "default",
            "resourceVersion": "59905",
            "selfLink": "/apis/mcm.ibm.com/v1alpha1/namespaces/default/applications/testapp",
            "uid": "f849165a-b2a8-11e8-bd43-b69970856045",
          },
          "spec": Object {
            "componentKinds": Array [
              Object {
                "group": "mcm.ibm.com/v1alpha1",
                "kind": "PlacementPolicy",
              },
              Object {
                "group": "mcm.ibm.com/v1alpha1",
                "kind": "Deployable",
              },
            ],
            "descriptor": Object {},
            "selector": Object {
              "matchLabels": Object {
                "hcmapp": "testapp",
              },
            },
          },
          "status": Object {
            "Deployable": Object {
              "metadata": Object {
                "creationTimestamp": null,
              },
              "spec": Object {
                "deployer": Object {
                  "helm": Object {},
                },
              },
              "status": Object {},
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Generic Resources Correctly Resolves Update Cluster Labels 1`] = `
Object {
  "data": Object {
    "updateResourceLabels": Object {
      "apiVersion": "compliance.mcm.ibm.com/v1alpha1",
      "kind": "Compliance",
      "metadata": Object {
        "annotations": Object {
          "seed-generation": "1",
        },
        "creationTimestamp": "2019-01-02T19:42:12Z",
        "finalizers": Array [
          "finalizer.mcm.ibm.com",
        ],
        "generation": 1,
        "name": "compliance-all",
        "namespace": "mcm",
        "resourceVersion": "5533372",
        "selfLink": "/apis/compliance.mcm.ibm.com/v1alpha1/namespaces/mcm/compliances/compliance-all",
        "uid": "7fc1f4a2-0ec6-11e9-8fd0-0ebe277f4f9c",
      },
      "spec": Object {
        "runtime-rules": Array [
          Object {
            "apiVersion": "policy.mcm.ibm.com/v1alpha1",
            "kind": "Policy",
            "metadata": Object {
              "creationTimestamp": null,
              "labels": Object {
                "hipaa": "true",
              },
              "name": "policy-all",
            },
            "spec": Object {
              "complianceType": "musthave",
              "namespaces": Object {
                "exclude": Array [
                  "kube*",
                ],
                "include": Array [
                  "default",
                ],
              },
              "object-templates": Array [
                Object {
                  "complianceType": "musthave",
                  "objectDefinition": Object {
                    "apiVersion": "v1",
                    "kind": "Pod",
                    "metadata": Object {
                      "name": "nginx",
                    },
                    "spec": Object {
                      "containers": Array [
                        Object {
                          "image": "nginx:1.7.9",
                          "name": "nginx",
                          "ports": Array [
                            Object {
                              "containerPort": 80,
                            },
                          ],
                        },
                      ],
                    },
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
                Object {
                  "complianceType": "musthave",
                  "objectDefinition": Object {
                    "apiVersion": "v1",
                    "kind": "Namespace",
                    "metadata": Object {
                      "labels": Object {
                        "name": "production",
                      },
                      "name": "production",
                    },
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
                Object {
                  "complianceType": "musthave",
                  "objectDefinition": Object {
                    "apiVersion": "rbac.authorization.k8s.io/v1",
                    "kind": "RoleBinding",
                    "metadata": Object {
                      "name": "operate-pods-rolebinding",
                      "namespace": "default",
                    },
                    "roleRef": Object {
                      "apiGroup": "rbac.authorization.k8s.io",
                      "kind": "Role",
                      "name": "operator",
                    },
                    "subjects": Array [
                      Object {
                        "apiGroup": "rbac.authorization.k8s.io",
                        "kind": "User",
                        "name": "jane",
                      },
                    ],
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
                Object {
                  "complianceType": "musthave",
                  "objectDefinition": Object {
                    "apiVersion": "policy/v1beta1",
                    "kind": "PodSecurityPolicy",
                    "metadata": Object {
                      "annotations": Object {
                        "seccomp.security.alpha.kubernetes.io/allowedProfileNames": "*",
                      },
                      "name": "privileged-mcm",
                    },
                    "spec": Object {
                      "allowPrivilegeEscalation": true,
                      "allowedCapabilities": Array [
                        "*",
                      ],
                      "fsGroup": Object {
                        "rule": "RunAsAny",
                      },
                      "hostIPC": true,
                      "hostNetwork": true,
                      "hostPID": true,
                      "hostPorts": Array [
                        Object {
                          "max": 65535,
                          "min": 0,
                        },
                      ],
                      "privileged": true,
                      "runAsUser": Object {
                        "rule": "RunAsAny",
                      },
                      "seLinux": Object {
                        "rule": "RunAsAny",
                      },
                      "supplementalGroups": Object {
                        "rule": "RunAsAny",
                      },
                      "volumes": Array [
                        "*",
                      ],
                    },
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
                Object {
                  "complianceType": "musthave",
                  "objectDefinition": Object {
                    "apiVersion": "networking.k8s.io/v1",
                    "kind": "NetworkPolicy",
                    "metadata": Object {
                      "name": "allow-all-mcm",
                    },
                    "spec": Object {
                      "ingress": Array [
                        Object {},
                      ],
                      "podSelector": Object {},
                    },
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
                Object {
                  "complianceType": "musthave",
                  "objectDefinition": Object {
                    "apiVersion": "v1",
                    "kind": "LimitRange",
                    "metadata": Object {
                      "name": "mem-limit-range",
                    },
                    "spec": Object {
                      "limits": Array [
                        Object {
                          "default": Object {
                            "memory": "512Mi",
                          },
                          "defaultRequest": Object {
                            "memory": "256Mi",
                          },
                          "type": "Container",
                        },
                      ],
                    },
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
              ],
              "remediationAction": "enforce",
              "role-templates": Array [
                Object {
                  "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                  "complianceType": "musthave",
                  "metadata": Object {
                    "creationTimestamp": null,
                    "name": "operator-role",
                  },
                  "rules": Array [
                    Object {
                      "complianceType": "musthave",
                      "policyRule": Object {
                        "apiGroups": Array [
                          "extensions",
                          "apps",
                        ],
                        "resources": Array [
                          "deployments",
                        ],
                        "verbs": Array [
                          "get",
                          "list",
                          "watch",
                          "create",
                          "delete",
                          "patch",
                        ],
                      },
                    },
                  ],
                  "selector": Object {
                    "matchLabels": Object {
                      "hipaa": "true",
                    },
                  },
                  "status": Object {
                    "Validity": Object {},
                  },
                },
              ],
            },
            "status": Object {},
          },
        ],
      },
      "status": Object {
        "placementBindings": Array [
          "binding-xz",
        ],
        "placementPolicies": Array [
          "placement-xz",
        ],
        "status": Object {
          "cluster1": Object {
            "aggregatePoliciesStatus": Object {
              "policy-all": Object {
                "compliant": "Compliant",
                "valid": true,
              },
            },
            "clustername": "cluster1",
            "compliant": "Compliant",
          },
          "cluster2": Object {
            "aggregatePoliciesStatus": Object {
              "policy-all": Object {
                "compliant": "Compliant",
                "valid": true,
              },
            },
            "clustername": "cluster2",
            "compliant": "Compliant",
          },
          "cluster3": Object {
            "aggregatePoliciesStatus": Object {
              "policy-all": Object {
                "compliant": "Compliant",
                "valid": true,
              },
            },
            "clustername": "cluster3",
            "compliant": "Compliant",
          },
        },
      },
    },
  },
}
`;

exports[`Generic Resources Correctly Resolves update Compliance Mutation 1`] = `
Object {
  "data": Object {
    "updateResource": Object {
      "apiVersion": "compliance.mcm.ibm.com/v1alpha1",
      "items": Array [
        Object {
          "apiVersion": "compliance.mcm.ibm.com/v1alpha1",
          "kind": "Compliance",
          "metadata": Object {
            "annotations": Object {
              "seed-generation": "1",
            },
            "creationTimestamp": "2019-01-02T19:42:12Z",
            "finalizers": Array [
              "finalizer.mcm.ibm.com",
            ],
            "generation": 1,
            "name": "compliance-xz",
            "namespace": "mcm",
            "resourceVersion": "5533372",
            "selfLink": "/apis/compliance.mcm.ibm.com/v1alpha1/namespaces/mcm/compliances/compliance-xz",
            "uid": "7fc1f4a2-0ec6-11e9-8fd0-0ebe277f4f9c",
          },
          "spec": Object {
            "runtime-rules": Array [
              Object {
                "apiVersion": "policy.mcm.ibm.com/v1alpha1",
                "kind": "Policy",
                "metadata": Object {
                  "creationTimestamp": null,
                  "labels": Object {
                    "hipaa": "true",
                  },
                  "name": "policy-all",
                },
                "spec": Object {
                  "complianceType": "musthave",
                  "namespaces": Object {
                    "exclude": Array [
                      "kube*",
                    ],
                    "include": Array [
                      "default",
                    ],
                  },
                  "object-templates": Array [
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "v1",
                        "kind": "Pod",
                        "metadata": Object {
                          "name": "nginx",
                        },
                        "spec": Object {
                          "containers": Array [
                            Object {
                              "image": "nginx:1.7.9",
                              "name": "nginx",
                              "ports": Array [
                                Object {
                                  "containerPort": 80,
                                },
                              ],
                            },
                          ],
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "v1",
                        "kind": "Namespace",
                        "metadata": Object {
                          "labels": Object {
                            "name": "production",
                          },
                          "name": "production",
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "rbac.authorization.k8s.io/v1",
                        "kind": "RoleBinding",
                        "metadata": Object {
                          "name": "operate-pods-rolebinding",
                          "namespace": "default",
                        },
                        "roleRef": Object {
                          "apiGroup": "rbac.authorization.k8s.io",
                          "kind": "Role",
                          "name": "operator",
                        },
                        "subjects": Array [
                          Object {
                            "apiGroup": "rbac.authorization.k8s.io",
                            "kind": "User",
                            "name": "jane",
                          },
                        ],
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "policy/v1beta1",
                        "kind": "PodSecurityPolicy",
                        "metadata": Object {
                          "annotations": Object {
                            "seccomp.security.alpha.kubernetes.io/allowedProfileNames": "*",
                          },
                          "name": "privileged-mcm",
                        },
                        "spec": Object {
                          "allowPrivilegeEscalation": true,
                          "allowedCapabilities": Array [
                            "*",
                          ],
                          "fsGroup": Object {
                            "rule": "RunAsAny",
                          },
                          "hostIPC": true,
                          "hostNetwork": true,
                          "hostPID": true,
                          "hostPorts": Array [
                            Object {
                              "max": 65535,
                              "min": 0,
                            },
                          ],
                          "privileged": true,
                          "runAsUser": Object {
                            "rule": "RunAsAny",
                          },
                          "seLinux": Object {
                            "rule": "RunAsAny",
                          },
                          "supplementalGroups": Object {
                            "rule": "RunAsAny",
                          },
                          "volumes": Array [
                            "*",
                          ],
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "networking.k8s.io/v1",
                        "kind": "NetworkPolicy",
                        "metadata": Object {
                          "name": "allow-all-mcm",
                        },
                        "spec": Object {
                          "ingress": Array [
                            Object {},
                          ],
                          "podSelector": Object {},
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                    Object {
                      "complianceType": "musthave",
                      "objectDefinition": Object {
                        "apiVersion": "v1",
                        "kind": "LimitRange",
                        "metadata": Object {
                          "name": "mem-limit-range",
                        },
                        "spec": Object {
                          "limits": Array [
                            Object {
                              "default": Object {
                                "memory": "512Mi",
                              },
                              "defaultRequest": Object {
                                "memory": "256Mi",
                              },
                              "type": "Container",
                            },
                          ],
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                  ],
                  "remediationAction": "enforce",
                  "role-templates": Array [
                    Object {
                      "apiVersion": "roletemplate.mcm.ibm.com/v1alpha1",
                      "complianceType": "musthave",
                      "metadata": Object {
                        "creationTimestamp": null,
                        "name": "operator-role",
                      },
                      "rules": Array [
                        Object {
                          "complianceType": "musthave",
                          "policyRule": Object {
                            "apiGroups": Array [
                              "extensions",
                              "apps",
                            ],
                            "resources": Array [
                              "deployments",
                            ],
                            "verbs": Array [
                              "get",
                              "list",
                              "watch",
                              "create",
                              "delete",
                              "patch",
                            ],
                          },
                        },
                      ],
                      "selector": Object {
                        "matchLabels": Object {
                          "hipaa": "true",
                        },
                      },
                      "status": Object {
                        "Validity": Object {},
                      },
                    },
                  ],
                },
                "status": Object {},
              },
            ],
          },
          "status": Object {
            "placementBindings": Array [
              "binding-xz",
            ],
            "placementPolicies": Array [
              "placement-xz",
            ],
            "status": Object {
              "cluster1": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-all": Object {
                    "compliant": "Compliant",
                    "valid": true,
                  },
                },
                "clustername": "cluster1",
                "compliant": "Compliant",
              },
              "cluster2": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-all": Object {
                    "compliant": "Compliant",
                    "valid": true,
                  },
                },
                "clustername": "cluster2",
                "compliant": "Compliant",
              },
              "cluster3": Object {
                "aggregatePoliciesStatus": Object {
                  "policy-all": Object {
                    "compliant": "Compliant",
                    "valid": true,
                  },
                },
                "clustername": "cluster3",
                "compliant": "Compliant",
              },
            },
          },
        },
      ],
      "kind": "ComplianceList",
      "metadata": Object {
        "continue": "",
        "resourceVersion": "4401288",
        "selfLink": "/apis/compliance.mcm.ibm.com/v1alpha1/namespaces/mcm/compliances",
      },
    },
  },
}
`;

exports[`Generic Resources Should Report Error While Create Resources Mutation 1`] = `
Object {
  "data": Object {
    "createResources": Object {
      "errors": Array [
        Object {
          "message": "Namespace not found in the template",
        },
      ],
    },
  },
}
`;
